# wetools

./: .gitignore  README.md  commands_to_upload  pyproject.toml  update_wetools_version.sh
.github/workflows/: deploy_to_pypi.yml
src/wetools/: __init__.py  funcs.py  geodetics.py  models.py  plotting.py
