[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml]",
    "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/wetools/_version.py"
version_scheme = "release-branch-semver"

[project]
name = "wetools"
version = "2.0.0"
authors = [
  { name="W Eaton", email="weaton@princeton.edu" },
]
description = "Tools I use day to day"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
  "numpy>=1.20.3",
  "scipy>1.7",
  "obspy>1.2",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/williameaton/wetools"
